--- a/src/Modules/card.css
+++ b/src/Modules/card.css
@@ -13,6 +13,13 @@
     margin-left: -4%;
   }
 
+  .logo-adjust{
+    margin-left:5vh;
+  }
+  .logo-nm-ad{
+    padding:7px;
+  }
+
   .vlist{
     margin-left: -20px;
   }
