--- a/src/Modules/card.css
+++ b/src/Modules/card.css
@@ -1,6 +1,16 @@
+.video-card{
+  margin: 10px;
+  height: 160px !important;
+  width: 155px !important;
+  background: rgb(172, 228, 245);
+  padding: 7px;
+  border-radius: 5px;
+}
+
+
 @media only screen and (min-width:767px) {
   .vidListAlign{
-    margin-left: 72%;
+    /* margin-left: 72%; */
     /* margin-top: -31%; */
     position: absolute;
     overflow-y: scroll;
@@ -21,7 +31,7 @@
   }
 
   .vlist{
-    margin-left: -20px;
+    /* margin-left: -20px; */
   }
   .flex-container {
     display: flex;
@@ -42,15 +52,33 @@
   .vidRend{
     margin-left: 10%;
   }
-  .listTitle{
-    color: #CBE3EB;
-    width: 162px; 
-    font-size: 90%;
-    font-family: 'Ubuntu', bold;
-    margin-left: -47px;
-    width: 28.7vh;
-  }
+  /* .list-content{} */
+  
 
+
+}
+
+
+.list-content{
+  /* width: 155px ; */
+  max-height: 155px;
+position: relative;
+/* overflow: auto; */
+}
+/* .list-content:before {
+  content:'';
+  width:100%;
+  height:100%;    
+  position:absolute;
+  left:0;
+  top:0;
+  background:linear-gradient(transparent 150px, white); */
+/* } */
+.listTitle{
+  color: rgb(3, 27, 43);
+  font-size: 90%;
+  font-family: 'Ubuntu', bold;
+  position: absolute; 
 
 }
 
@@ -147,7 +175,7 @@
 }
 
 .listColor{
-  background-color: '#545758';
+  /* background-color: '#545758'; */
 }
 
 .videoList{
