--- a/src/Modules/card.css
+++ b/src/Modules/card.css
@@ -1,7 +1,18 @@
+@media only screen and (min-width:767px) {
+  .video-card{
+    margin: 10px;
+    height: 170px !important;
+    width: 194px !important;
+    background: rgb(172, 228, 245);
+    padding: 7px;
+    border-radius: 5px;
+  }
+}
 .video-card{
-  margin: 10px;
-  height: 170px !important;
-  width: 194px !important;
+  margin-bottom: 10px;
+  margin-right: 10px;
+  height: 60vw;
+  width: 96%;
   background: rgb(172, 228, 245);
   padding: 7px;
   border-radius: 5px;
@@ -20,7 +31,8 @@
     /* scrollbar-face-color: red yellow; */
   }
   .maincomp{
-    margin-left: -4%;
+    margin-top:100px;
+    /* margin-left: -4%; */
   }
 
   .logo-adjust{
@@ -63,6 +75,7 @@
   /* width: 155px ; */
   max-height: 155px;
 position: relative;
+vertical-align: middle;
 /* overflow: auto; */
 }
 /* .list-content:before {
