--- a/src/Modules/card.css
+++ b/src/Modules/card.css
@@ -1,8 +1,31 @@
+/* .video-list-anime{
+
+}
+.video-list-anime:hover{
+  animation: vid-list-anime 1s ease-out;
+} */
+
+@keyframes vid-list-anime{
+
+  0%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.2);
+  }
+  100%{
+    transform: scale(1);
+    /* height: 60vw;
+  width: 96%; */
+  }
+
+}
+
 @media only screen and (min-width:767px) {
   .video-card{
-    margin: 10px;
-    height: 170px !important;
-    width: 194px !important;
+    /* margin: 10px; */
+    height: 219px !important;
+    width: 267px !important;
     background: rgb(172, 228, 245);
     padding: 7px;
     border-radius: 5px;
@@ -16,6 +39,13 @@
   background: rgb(172, 228, 245);
   padding: 7px;
   border-radius: 5px;
+  
+}
+.video-card:hover{
+  animation: vid-list-anime 0.5s ease-out;
+  min-height: 60vw;
+  width: 96%;
+  z-index: 12;
 }
 
 
@@ -74,6 +104,7 @@
 .list-content{
   /* width: 155px ; */
   max-height: 155px;
+  padding-top: 10px;
 position: relative;
 vertical-align: middle;
 /* overflow: auto; */
@@ -92,7 +123,7 @@ vertical-align: middle;
   font-size: 90%;
   font-family: 'Ubuntu', bold;
   position: absolute; 
-
+  padding-top: 3px;
 }
 
 @media only screen and (max-width:992px) {
