--- a/src/Modules/card.css
+++ b/src/Modules/card.css
@@ -5,16 +5,80 @@
   animation: vid-list-anime 1s ease-out;
 } */
 
+@media only screen and (max-width:447px) {
+  /* .up-down-icon{
+    top: 200px;
+    float: right;
+    right: 5vh;
+    z-index: 13;
+    position: fixed;
+  } */
+  .maincomp{
+    margin-top: 28%;
+  }
+}
+
+.up-down-icon{
+  top: 111px;
+  float: right;
+  right: 5vh;
+  z-index: 13;
+  position: fixed;
+}
+.icon-up{
+color:rgb(82, 197, 82);
+margin-right: 20px;
+z-index: 1;
+}
+.icon-down{
+  color:rgb(231, 76, 76);
+  z-index: 1;
+  }
+
+  .icon-up:hover{
+  color:rgb(56, 128, 56);
+  /* margin-right: 20px;
+  transform: scale(1.2);
+  z-index: 1; */
+  /* animation: vid-list-anime .5s ease-out; */
+}
+.icon-down:hover{
+  color:rgb(194, 62, 62);
+  /* transform: rotateY(180deg);
+  z-index: 1; */
+  /* transform: scale(1.2); */
+  /* animation: up-down-icon-anime .5s ease-out; */
+}
+
+.invert{
+  transform: rotateY(180deg);
+}
+@keyframes up-down-icon-anime{
+
+  0%{
+    transform: scale(1);
+  }
+  80%{
+    transform: scale(1.3);
+  }
+  100%{
+    transform: scale(1.2);
+    /* height: 60vw;
+  width: 96%; */
+  }
+
+}
+
 @keyframes vid-list-anime{
 
   0%{
     transform: scale(1);
   }
-  50%{
-    transform: scale(1.2);
+  80%{
+    transform: scale(1.3);
   }
   100%{
-    transform: scale(1);
+    transform: scale(1.2);
     /* height: 60vw;
   width: 96%; */
   }
@@ -28,6 +92,8 @@
     width: 267px !important;
     background: rgb(172, 228, 245);
     padding: 7px;
+    margin-bottom: 10px;
+  margin-right: 10px;
     border-radius: 5px;
   }
 }
@@ -43,9 +109,10 @@
 }
 .video-card:hover{
   animation: vid-list-anime 0.5s ease-out;
-  min-height: 60vw;
+  /* min-height: 60vw; */
   width: 96%;
   z-index: 12;
+  transform: scale(1.2);
 }
 
 
@@ -61,7 +128,7 @@
     /* scrollbar-face-color: red yellow; */
   }
   .maincomp{
-    margin-top:100px;
+    margin-top:50px;
     /* margin-left: -4%; */
   }
 
