--- a/src/Modules/card.css
+++ b/src/Modules/card.css
@@ -21,9 +21,10 @@
 .up-down-icon{
   top: 111px;
   float: right;
-  right: 5vh;
+  /* right: 5vh; */
   z-index: 13;
   position: fixed;
+  cursor: pointer;
 }
 .icon-up{
 color:rgb(82, 197, 82);
@@ -300,6 +301,10 @@ vertical-align: middle;
   text-shadow: 4px 4px 4px rgb(0, 0, 0);
   margin-top: 0px !important;
   margin-bottom: 0px !important;
+}
+
+.fa-film{
+  text-shadow: 4px 4px 4px rgb(0, 0, 0);
 }
 
 .myCard{
